# rusdb

./: .gitignore  Cargo.toml
.github/workflows/: clippy.yml  rustfmt.yml  squash-and-merge.yml
crates/error/: Cargo.toml
crates/error/src/: error.rs  lib.rs
crates/execution/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/src/disk/: .gitignore  disk_manager.rs  mod.rs
crates/storage/src/disk/data/: README.md
src/: lib.rs
