[package]
name = "rustdb-storage"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
# documentation = "https://docs.rs/rustdb-storage"
description = "The storage engine for the Rustdb pedagogical database management system."

[dependencies]
serde.workspace = true

[lints]
workspace = true